force-app/main/default/objects/HelpedElement__c/HelpedElement__c.object-meta.xml
<CustomObject>
    <description>A help-enabled element on a Helped Page Layout that accesses a specific Help Topic</description>
    <label>Helped Element</label>
    <nameField>
        <label>Helped Element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Helped Elements</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>