force-app/main/default/objects/HelpedElement__c/fields/DataDrivenFilter__c.field-meta.xml
<CustomField>
    <fullName>DataDrivenFilter__c</fullName>
    <description>(Optional) criteria limiting the circumstances in which this Helped Element is to be displayed based on data values</description>
    <inlineHelpText>(Optional) criteria limiting the circumstances in which this Helped Element is to be displayed based on data values. Use Field Name not the Label, as this builds a SOQL query.</inlineHelpText>
    <label>Data-driven Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>