force-app/main/default/objects/HelpedElement__c/fields/ElementType__c.field-meta.xml
<CustomField>
    <fullName>ElementType__c</fullName>
    <description>The type of page element that is being helped</description>
    <inlineHelpText>The type of page element that is being helped</inlineHelpText>
    <label>Element Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Button</fullName>
            </value>
            <value>
                <fullName>Context Tree Root</fullName>
            </value>
            <value>
                <fullName>Contextual Flow</fullName>
            </value>
            <value>
                <fullName>Custom Link</fullName>
            </value>
            <value>
                <fullName>Custom Section Label</fullName>
            </value>
            <value>
                <fullName>Detail Section Label</fullName>
            </value>
            <value>
                <fullName>Field</fullName>
                <default>true</default>
                <label>Field</label>
            </value>
            <value>
                <fullName>Help and Training Link</fullName>
            </value>
            <value>
                <fullName>Page Help Link</fullName>
            </value>
            <value>
                <fullName>Record Title</fullName>
            </value>
            <value>
                <fullName>Related List Column Label</fullName>
            </value>
            <value>
                <fullName>Related List Help Link</fullName>
            </value>
            <value>
                <fullName>Related List Label</fullName>
            </value>
            <value>
                <fullName>Signature Element</fullName>
            </value>
            <value>
                <fullName>Visualforce Element</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>