force-app/main/default/objects/HelpedElement__c/fields/FilterIdentifier__c.field-meta.xml
<CustomField>
    <fullName>FilterIdentifier__c</fullName>
    <formula>HelpFilter__r.FilterIdentifier__c</formula>
    <label>Filter Identifier</label>
    <type>Text</type>
</CustomField>