force-app/main/default/objects/HelpedElement__c/fields/HasDDF__c.field-meta.xml
<CustomField>
    <fullName>HasDDF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this Helped Element has a Data Driven Filter</description>
    <inlineHelpText>Checked if this Helped Element has a Data Driven Filter</inlineHelpText>
    <label>Has DDF?</label>
    <type>Checkbox</type>
</CustomField>