force-app/main/default/objects/HelpedElement__c/fields/HelpedPageLayout__c.field-meta.xml
<CustomField>
    <fullName>HelpedPageLayout__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Layout on which this Helped Element occurs</description>
    <inlineHelpText>The Layout on which this Helped Element occurs</inlineHelpText>
    <label>Helped Page Layout</label>
    <referenceTo>HelpedPageLayout__c</referenceTo>
    <relationshipLabel>Helped Elements</relationshipLabel>
    <relationshipName>Helped_Elements</relationshipName>
    <type>Lookup</type>
</CustomField>