force-app/main/default/objects/HelpedElement__c/fields/HelpFilter__c.field-meta.xml
<CustomField>
    <fullName>HelpFilter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Help Filter</label>
    <referenceTo>HelpFilter__c</referenceTo>
    <relationshipLabel>Helped Elements</relationshipLabel>
    <relationshipName>Helped_Elements</relationshipName>
    <type>Lookup</type>
</CustomField>