force-app/main/default/objects/HelpedElement__c/fields/HelpTopic__c.field-meta.xml
<CustomField>
    <fullName>HelpTopic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Help Topic to associate with this Helped Element</description>
    <inlineHelpText>The Help Topic to associate with this Helped Element</inlineHelpText>
    <label>Help Topic</label>
    <referenceTo>HelpTopic__c</referenceTo>
    <relationshipLabel>Helped Elements</relationshipLabel>
    <relationshipName>Helped_Elements</relationshipName>
    <type>Lookup</type>
</CustomField>