force-app/main/default/objects/HelpedElement__c/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <description>Character string that uniquely identifies this Helped Element on a viewed (Helped Page) Layout</description>
    <inlineHelpText>Character string that uniquely identifies this Helped Element on a viewed (Helped Page) Layout</inlineHelpText>
    <label>Identifier</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>