force-app/main/default/objects/HelpedElement__c/fields/Parameters__c.field-meta.xml
<CustomField>
    <fullName>Parameters__c</fullName>
    <description>Additional parameters for certain special cases, such as provision of contextual flow information</description>
    <inlineHelpText>Additional parameters for certain special cases, such as provision of contextual flow information</inlineHelpText>
    <label>Parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>