force-app/main/default/objects/HelpedElement__c/fields/UseForNew__c.field-meta.xml
<CustomField>
    <fullName>UseForNew__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Where data driven filters are in use for a given Helpable, check this box to force usage of this Helped Element when creating new object records.</description>
    <inlineHelpText>Where data driven filters are in use for a given Helpable, check this box to force usage of this Helped Element when creating new object records.</inlineHelpText>
    <label>Use for new records?</label>
    <type>Checkbox</type>
</CustomField>