force-app/main/default/objects/HelpedElement__c/fields/Visibility__c.field-meta.xml
<CustomField>
    <fullName>Visibility__c</fullName>
    <inlineHelpText>Help Topic classification to enable context-based visibility using data sharing rules.</inlineHelpText>
    <label>Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Partners</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>