force-app/main/default/objects/HelpedElement__c/listViews/All_Data_Driven_Helped_Elements.listView-meta.xml
<ListView>
    <fullName>All_Data_Driven_Helped_Elements</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>FilterIdentifier__c</columns>
    <columns>DataDrivenFilter__c</columns>
    <columns>ElementType__c</columns>
    <columns>HelpedPageLayout__c</columns>
    <columns>HelpTopic__c</columns>
    <columns>Identifier__c</columns>
    <columns>Visibility__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HasDDF__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>FilterIdentifier__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Data Driven Helped Elements</label>
</ListView>