force-app/main/default/objects/HelpedElement__c/listViews/AllFieldHelpedElements.listView-meta.xml
<ListView>
    <fullName>AllFieldHelpedElements</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>ElementType__c</columns>
    <columns>Identifier__c</columns>
    <columns>HelpTopic__c</columns>
    <columns>Visibility__c</columns>
    <columns>FilterIdentifier__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ElementType__c</field>
        <operation>equals</operation>
        <value>Field</value>
    </filters>
    <label>1. All &apos;Field&apos; Helped Elements</label>
</ListView>