force-app/main/default/objects/HelpedElement__c/listViews/AllHelpedElements.listView-meta.xml
<ListView>
    <fullName>AllHelpedElements</fullName>
    <columns>HelpedPageLayout__c</columns>
    <columns>NAME</columns>
    <columns>ElementType__c</columns>
    <columns>Identifier__c</columns>
    <columns>HelpTopic__c</columns>
    <columns>Visibility__c</columns>
    <columns>Parameters__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>1. All Helped Elements</label>
</ListView>