force-app/main/default/objects/HelpedElement__c/listViews/AllPageHelpedElements.listView-meta.xml
<ListView>
    <fullName>AllPageHelpedElements</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>ElementType__c</columns>
    <columns>Identifier__c</columns>
    <columns>HelpTopic__c</columns>
    <columns>Visibility__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ElementType__c</field>
        <operation>equals</operation>
        <value>Page Help Link</value>
    </filters>
    <label>3. All &apos;Page Help Links&apos; Helped Elements</label>
</ListView>