force-app/main/default/objects/HelpedElement__c/listViews/AllRListLabelHelpedElements.listView-meta.xml
<ListView>
    <fullName>AllRListLabelHelpedElements</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>ElementType__c</columns>
    <columns>Identifier__c</columns>
    <columns>HelpTopic__c</columns>
    <columns>Visibility__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ElementType__c</field>
        <operation>equals</operation>
        <value>Related List Label</value>
    </filters>
    <label>8. All &apos;Rel List Label&apos; Helped Elements</label>
</ListView>