force-app/main/default/objects/HelpedElement__c/listViews/AllSectionLabelHelpedElements.listView-meta.xml
<ListView>
    <fullName>AllSectionLabelHelpedElements</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>ElementType__c</columns>
    <columns>Identifier__c</columns>
    <columns>HelpTopic__c</columns>
    <columns>Visibility__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ElementType__c</field>
        <operation>equals</operation>
        <value>Detail Section Label</value>
    </filters>
    <label>9. All &apos;Details Label&apos; Helped Elements</label>
</ListView>