force-app/main/default/objects/HelpedElement__c/listViews/Context_Tree_Roots.listView-meta.xml
<ListView>
    <fullName>Context_Tree_Roots</fullName>
    <columns>HelpedPageLayout__c</columns>
    <columns>NAME</columns>
    <columns>DataDrivenFilter__c</columns>
    <columns>HelpTopic__c</columns>
    <columns>Visibility__c</columns>
    <columns>ElementType__c</columns>
    <columns>Identifier__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Identifier__c</field>
        <operation>equals</operation>
        <value>ContextTreeRoot</value>
    </filters>
    <label>Context Tree Roots</label>
</ListView>