force-app/main/default/objects/HelpedElement__c/listViews/Contextual_Flows.listView-meta.xml
<ListView>
    <fullName>Contextual_Flows</fullName>
    <columns>HelpedPageLayout__c</columns>
    <columns>NAME</columns>
    <columns>DataDrivenFilter__c</columns>
    <columns>HelpTopic__c</columns>
    <columns>Visibility__c</columns>
    <columns>ElementType__c</columns>
    <columns>Identifier__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ElementType__c</field>
        <operation>equals</operation>
        <value>Contextual Flow</value>
    </filters>
    <label>Contextual Flows</label>
</ListView>