force-app/main/default/objects/HelpedElement__c/listViews/Use_for_New_elements.listView-meta.xml
<ListView>
    <fullName>Use_for_New_elements</fullName>
    <columns>HelpedPageLayout__c</columns>
    <columns>NAME</columns>
    <columns>DataDrivenFilter__c</columns>
    <columns>HelpTopic__c</columns>
    <columns>Visibility__c</columns>
    <columns>ElementType__c</columns>
    <columns>Identifier__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UseForNew__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Use for New elements</label>
</ListView>